--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,20 +36,21 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: Install Vercel CLI
-        if: ${{ success() && github.event_name == 'push' }}
+        if: ${{ success() && github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')}}
         run: npm install --global vercel@canary
       - name: Pull Vercel Environment Information
-        if: ${{ success() && github.event_name == 'push' }}
+        if: ${{ success() && github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')}}
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
-        if: ${{ success() && github.event_name == 'push' }}
+        if: ${{ success() && github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')}}
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy Project Artifacts to Vercel
-        if: ${{ success() && github.event_name == 'push' }}
+        if: ${{ success() && github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')}}
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+
   tag_release:
     needs: [simple_deployment_pipeline]
-    if: ${{ github.event_name == 'push' }}
+    if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip') }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
